tests/negative/typecheck/args_named_dup.orng
// args_named_dup.orng:11:33: error: duplicate item `a`
//     let x = My_Type(.a = 4, .a = 5, .b = 4)
//                                ^
// 
struct My_Type {
    a: Int
    b: Int
}

fn main() -> Int {
    let x = My_Type(.a = 4, .a = 5, .b = 4)
    0
}